[project]
name = "Project-3-AbsoluteCinema"
version = "0.1.0"
description = "RAG-Chatbot"
authors = [
    {name = "fadhlanrio-frl",email = "fadhlan.ardy@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=1.2.6,<2.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langchain-qdrant (>=1.1.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "qdrant-client (>=1.16.2,<2.0.0)",
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "langfuse (>=3.12.0,<4.0.0)",
    "streamlit (>=1.53.0,<2.0.0)",
    "langchain-core (>=1.2.7,<2.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
